crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__await__no_expression_0.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/await/no_expression_0.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..73,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 61..66,
                    value: Await(
                        ExprAwait {
                            node_index: NodeIndex(None),
                            range: 61..66,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 66..66,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 68..73,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(None),
                            range: 68..73,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 68..69,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 72..73,
                                    id: Name("y"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # No expression after `await`, an expression on another line
2 | await
  |      ^ Syntax Error: Expected an expression
3 |
4 | x + y
  |
